sidux-hermes (0.1.0) unstable; urgency=low

  * Initial release.

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 21 Dec 2008 23:59:59 +0100