@@ -74,5 +74,17 @@ repository. It gets the warnings from the sidux homepage.</source>
         <source>Icons</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>Kernel informations</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Current kernel</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Newest  kernel</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 </TS>
