@@ -76,5 +76,17 @@ tiposchi@tiscali.it</translation>
         <source>Icons</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>Kernel informations</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Current kernel</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Newest  kernel</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 </TS>
